--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.1",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify-es": "^1.0.4",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^5.0.1",
     "gulp.sass": "^1.3.9",
@@ -36,6 +36,7 @@
   "scripts": {
     "test": "test",
     "develop": "gulp",
+    "clean": "gulp clean",
     "build": "gulp build"
   },
   "author": "Grigoriy Lobanov",
